<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="-54dp"
        tools:layout_editor_absoluteY="-353dp">

        <TextView
            android:id="@+id/txtVwScreen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="bottom|right"
            android:text=""
            app:autoSizeMaxTextSize="60sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/txtVwResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""
            android:gravity="bottom|right"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="32sp"/>

        <LinearLayout
            android:id="@+id/lytMSMC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMS"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnMS"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnMR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnMR"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnMC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnMC"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnClear"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/lyt79"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn7"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn8"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn9"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnDivide"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnDivide"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt46"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn4"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn5"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn6"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnMultiply"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnMultiply"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytM13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn1"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn2"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn3"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnSubtract"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnSubtract"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn0"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnDecimal"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>


            <Button
                android:id="@+id/btnEquals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnEquals"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnSumm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnSumm"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>